MDEV-6313 - mysqld --log-bin=no-such-dir/master crashes during             server initialization

ER() macro was used during server initialization. It refers to
current_thd, which is not available that early.

Print error to error log in "lc-messages" locale.
Avoid duplicate error message during server initialization.